@@ -17,7 +17,6 @@
 package org.compiere.model;
 
 import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -187,7 +186,7 @@ public class CalloutOrder extends CalloutEngine
 					if (s != null && s.length() != 0)
 						mTab.setValue("PaymentRule", s);
 					//	Payment Term
-					Integer ii =Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					Integer ii =new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -279,7 +278,7 @@ public class CalloutOrder extends CalloutEngine
 				}
 
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
@@ -289,13 +288,13 @@ public class CalloutOrder extends CalloutEngine
 					{
 						MPriceList pl = new MPriceList(ctx, i, null);
 						if (IsSOTrx == pl.isSOPriceList())
-							mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
+							mTab.setValue("M_PriceList_ID", new Integer(i));
 						else
 						{
 							String sql2 = "SELECT M_PriceList_ID FROM M_PriceList WHERE AD_Client_ID=? AND IsSOPriceList=? AND IsActive='Y' ORDER BY IsDefault DESC";
 							ii = DB.getSQLValue (null, sql2, Env.getAD_Client_ID(ctx), IsSOTrx);
 							if (ii != 0)
-								mTab.setValue("M_PriceList_ID", Integer.valueOf(ii));
+								mTab.setValue("M_PriceList_ID", new Integer(ii));
 						}
 					}
 				}
@@ -326,7 +325,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
 				// Ship-To Location
 				if (shipTo_ID == 0)
 					shipTo_ID = rs.getInt("C_BPartner_Location_ID");
@@ -334,7 +333,7 @@ public class CalloutOrder extends CalloutEngine
 				if (shipTo_ID == 0)
 					mTab.setValue("C_BPartner_Location_ID", null);
 				else
-					mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(shipTo_ID));
+					mTab.setValue("C_BPartner_Location_ID", new Integer(shipTo_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -348,8 +347,8 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue("AD_User_ID", null);
 				else
 				{
-					mTab.setValue("AD_User_ID", Integer.valueOf(contID));
-					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
+					mTab.setValue("AD_User_ID", new Integer(contID));
+					mTab.setValue("Bill_User_ID", new Integer(contID));
 				}
 
 				//	CreditAvailable
@@ -482,7 +481,7 @@ public class CalloutOrder extends CalloutEngine
 			if (rs.next())
 			{
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
@@ -492,13 +491,13 @@ public class CalloutOrder extends CalloutEngine
 					{
 						MPriceList pl = new MPriceList(ctx, i, null);
 						if (IsSOTrx == pl.isSOPriceList())
-							mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
+							mTab.setValue("M_PriceList_ID", new Integer(i));
 						else
 						{
 							String sql2 = "SELECT M_PriceList_ID FROM M_PriceList WHERE AD_Client_ID=? AND IsSOPriceList=? AND IsActive='Y' ORDER BY IsDefault DESC";
 							ii = DB.getSQLValue (null, sql2, Env.getAD_Client_ID(ctx), IsSOTrx);
 							if (ii != 0)
-								mTab.setValue("M_PriceList_ID", Integer.valueOf(ii));
+								mTab.setValue("M_PriceList_ID", new Integer(ii));
 						}
 					}
 				}
@@ -521,7 +520,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -534,7 +533,7 @@ public class CalloutOrder extends CalloutEngine
 				if (contID == 0)
 					mTab.setValue("Bill_User_ID", null);
 				else
-					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
+					mTab.setValue("Bill_User_ID", new Integer(contID));
 
 				//	CreditAvailable
 				if (IsSOTrx)
@@ -580,7 +579,7 @@ public class CalloutOrder extends CalloutEngine
 					if (s != null && s.length() != 0)
 						mTab.setValue("PaymentRule", s);
 					//	Payment Term
-					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -786,9 +785,9 @@ public class CalloutOrder extends CalloutEngine
 		mTab.setValue("PriceLimit", pp.getPriceLimit());
 		mTab.setValue("PriceActual", pp.getPriceStd());
 		mTab.setValue("PriceEntered", pp.getPriceStd());
-		mTab.setValue("C_Currency_ID", Integer.valueOf(pp.getC_Currency_ID()));
+		mTab.setValue("C_Currency_ID", new Integer(pp.getC_Currency_ID()));
 		mTab.setValue("Discount", pp.getDiscount());
-		mTab.setValue("C_UOM_ID", Integer.valueOf(pp.getC_UOM_ID()));
+		mTab.setValue("C_UOM_ID", new Integer(pp.getC_UOM_ID()));
 		mTab.setValue("QtyOrdered", mTab.getValue("QtyEntered"));
 		Env.setContext(ctx, WindowNo, "EnforcePriceLimit", pp.isEnforcePriceLimit() ? "Y" : "N");
 		Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
@@ -798,7 +797,7 @@ public class CalloutOrder extends CalloutEngine
 		//	Integer wh = (Integer)mTab.getValue("M_Warehouse_ID");
 		//	if (wh.intValue() != M_Warehouse_ID)
 		//	{
-		//		mTab.setValue("M_Warehouse_ID", Integer.valueOf(M_Warehouse_ID));
+		//		mTab.setValue("M_Warehouse_ID", new Integer(M_Warehouse_ID));
 		//		ADialog.warn(,WindowNo, "WarehouseChanged");
 		//	}
 
@@ -825,7 +824,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = Integer.valueOf(0);
+						C_OrderLine_ID = new Integer(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx,
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
@@ -872,7 +871,7 @@ public class CalloutOrder extends CalloutEngine
 		}
 		mTab.setValue("M_AttributeSetInstance_ID", null);
 		mTab.setValue("S_ResourceAssignment_ID", null);
-		mTab.setValue("C_UOM_ID", Integer.valueOf(100));	//	EA
+		mTab.setValue("C_UOM_ID", new Integer(100));	//	EA
 
 		Env.setContext(ctx, WindowNo, "DiscountSchema", "N");
 		String sql = "SELECT ChargeAmt FROM C_Charge WHERE C_Charge_ID=?";
@@ -979,7 +978,7 @@ public class CalloutOrder extends CalloutEngine
 		if (C_Tax_ID == 0)
 			mTab.fireDataStatusEEvent(CLogger.retrieveError());
 		else
-			mTab.setValue("C_Tax_ID", Integer.valueOf(C_Tax_ID));
+			mTab.setValue("C_Tax_ID", new Integer(C_Tax_ID));
 		//
 		if (steps) log.warning("fini");
 		return amt(ctx, WindowNo, mTab, mField, value);
@@ -1122,7 +1121,7 @@ public class CalloutOrder extends CalloutEngine
 			if ( PriceList.doubleValue() != 0 )
 				PriceActual = BigDecimal.valueOf((100.0 - Discount.doubleValue()) / 100.0 * PriceList.doubleValue());
 			if (PriceActual.scale() > StdPrecision)
-				PriceActual = PriceActual.setScale(StdPrecision, RoundingMode.HALF_UP);
+				PriceActual = PriceActual.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
 			PriceEntered = MUOMConversion.convertProductFrom (ctx, M_Product_ID,
 				C_UOM_To_ID, PriceActual);
 			if (PriceEntered == null)
@@ -1138,7 +1137,7 @@ public class CalloutOrder extends CalloutEngine
 			else
 				Discount = BigDecimal.valueOf((PriceList.doubleValue() - PriceActual.doubleValue()) / PriceList.doubleValue() * 100.0);
 			if (Discount.scale() > 2)
-				Discount = Discount.setScale(2, RoundingMode.HALF_UP);
+				Discount = Discount.setScale(2, BigDecimal.ROUND_HALF_UP);
 			mTab.setValue("Discount", Discount);
 		}
 		if (log.isLoggable(Level.FINE)) log.fine("PriceEntered=" + PriceEntered + ", Actual=" + PriceActual + ", Discount=" + Discount);
@@ -1166,7 +1165,7 @@ public class CalloutOrder extends CalloutEngine
 			{
 				Discount = BigDecimal.valueOf((PriceList.doubleValue () - PriceActual.doubleValue ()) / PriceList.doubleValue () * 100.0);
 				if (Discount.scale () > 2)
-					Discount = Discount.setScale (2, RoundingMode.HALF_UP);
+					Discount = Discount.setScale (2, BigDecimal.ROUND_HALF_UP);
 				mTab.setValue ("Discount", Discount);
 			}
 		}
@@ -1174,7 +1173,7 @@ public class CalloutOrder extends CalloutEngine
 		//	Line Net Amt
 		BigDecimal LineNetAmt = QtyOrdered.multiply(PriceActual);
 		if (LineNetAmt.scale() > StdPrecision)
-			LineNetAmt = LineNetAmt.setScale(StdPrecision, RoundingMode.HALF_UP);
+			LineNetAmt = LineNetAmt.setScale(StdPrecision, BigDecimal.ROUND_HALF_UP);
 		if (log.isLoggable(Level.INFO)) log.info("LineNetAmt=" + LineNetAmt);
 		mTab.setValue("LineNetAmt", LineNetAmt);
 		//
@@ -1213,7 +1212,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = ((Integer)value).intValue();
 			QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				if (log.isLoggable(Level.FINE)) log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID
@@ -1244,7 +1243,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, mTab.getTabNo(), "C_UOM_ID");
 			QtyEntered = (BigDecimal)value;
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				if (log.isLoggable(Level.FINE)) log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID
@@ -1270,7 +1269,7 @@ public class CalloutOrder extends CalloutEngine
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, mTab.getTabNo(), "C_UOM_ID");
 			QtyOrdered = (BigDecimal)value;
 			int precision = MProduct.get(ctx, M_Product_ID).getUOMPrecision();
-			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, RoundingMode.HALF_UP);
+			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, BigDecimal.ROUND_HALF_UP);
 			if (QtyOrdered.compareTo(QtyOrdered1) != 0)
 			{
 				if (log.isLoggable(Level.FINE)) log.fine("Corrected QtyOrdered Scale "
@@ -1318,7 +1317,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = Integer.valueOf(0);
+						C_OrderLine_ID = new Integer(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx,
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
@@ -1427,4 +1426,5 @@ public class CalloutOrder extends CalloutEngine
 	}
 
 }	//	CalloutOrder
+
 
